--- a/contato.html
+++ b/contato.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-dark navbar-expand-lg navbar-default fixed-top">
             <div class="container-fluid">
                 <!-- logo -->
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img src="img/logoSandroSomogyi.png" alt=""/>
                 </a>
 
@@ -57,11 +57,11 @@
                     <div class="col-lg-12 col-12 text-light jumbotron bg-transparent">
                         <div class="col-lg-12 col-12">
 
-                            <div class="col-lg-4 col-12">
+                            <div class="col-lg-4 col-4">
                                 <h2 style="text-align: right;color: #eb9722;">OLÁ,<br> AGUARDO <br>
                                     O SEU CONTATO.</h2>
                             </div>
-                            <div  style= "float: right;" class="col-lg-8 col-12">
+                            <div  style= "float: right;" class="col-lg-8 col-8">
                                 <p style= "font-size: 25px" class="text-dark"> 
                                     011-99897-8957 <br> sdsandros86@hotmail.com <br>                                   
                                 </p>
@@ -83,7 +83,7 @@
         </header>
 
         <!-- rodapé -->
-        <footer class="text-light text-center bg-dark">
+        <footer class="text-light text-center bg-dark footer">
             <p style="color:#020202">Desenvolvido por <a href="https://www.linkedin.com/in/sandro-de-arag%C3%A3o-somogyi-36aa59130/">Sandro Somogyi.</p>
         </footer>
         <!-- fim rodapé -->
