--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-dark navbar-expand-lg navbar-default fixed-top">
             <div class="container-fluid">
                 <!-- logo -->
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="contato.html">
                     <img src="img/logoSandroSomogyi.png" alt=""/>
                 </a>
 
@@ -32,8 +32,8 @@
                 </button>
 
                 <!-- menu -->
-                <div class="collapse navbar-collapse" id="menu">
-                    <ul class="navbar-nav ml-md-auto text-light">
+                <div class="collapse navbar-collapse flex-grow-0" id="menu">
+                    <ul class="navbar-nav ml-md-auto text-light text-right">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Sobre</a>
                         </li>
@@ -57,11 +57,11 @@
                     <div class="col-lg-7 col-12 text-light jumbotron bg-transparent">
                         <div class="col-lg-12 col-12">
 
-                            <div class="col-lg-6 col-12">
+                            <div class="col-lg-6 col-6">
                                 <h2 style="text-align: right;color: #eb9722;">OLÁ,<br> SOU O <br>
                                     SANDRO <br> E EU SOU <br> DESENVOLVEDOR.</h2>
                             </div>
-                            <div  style= "float: right;" class="col-lg-6 col-12">
+                            <div  style= "float: right;" class="col-lg-6 col-6">
                                 <p style= "font-size: 25px" class="text-dark">Meu nome é Sandro Somogyi, estou me formando em Análise e 
                                     desenvolvimento de sistemas e pretendo trabalhar com desenvolvimento.</p>
                             </div>
@@ -95,20 +95,20 @@
                             </a>
                         </div>
                     </div>
-
+                    
                     <div class="col-lg-8 col-12 center">
                         <p style= "font-size: 25px" class="text-dark">Tenho um pouco de experiência com criação de sites, 
                             e um pouco de sistemas dos quais pode ser visto em minha aba de projetos.</p>
                         <p style= "font-size: 25px" class="text-dark">Procuro por uma oportunidade de trabalho no momento para participar de uma empresa 
                             legal e uma boa equipe, assim tendo um bom desenvolvimento profissional.</p>
-                        <a href="projetos.html" class="btn btn-outline-info btn-lg btn-block">Conheça meus Projetos</a>
+                        <a href="projetos.html" class="btn btn-warning btn-lg btn-block">Conheça meus Projetos</a>
                     </div>
 
                     </header>
                     <!-- fim header -->
 
                     <!-- rodapé -->
-                    <footer class="text-light text-center bg-dark">
+                    <footer  class="text-light text-center bg-dark footer">
                         <p style="color:#020202">Desenvolvido por <a href="https://www.linkedin.com/in/sandro-de-arag%C3%A3o-somogyi-36aa59130/">Sandro Somogyi.</p>
                     </footer>
                     <!-- fim rodapé -->
