--- a/projetos.html
+++ b/projetos.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-dark navbar-expand-lg navbar-default fixed-top">
             <div class="container-fluid">
                 <!-- logo -->
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="contato.html">
                     <img src="img/logoSandroSomogyi.png" alt=""/>
                 </a>
 
@@ -105,7 +105,7 @@
         <!-- fim cursos -->
 
 	<!-- rodapé -->
-	<footer class="text-light text-center bg-dark">
+	<footer class="text-light text-center bg-dark footer">
 		<p style="color:#020202">Desenvolvido por <a href="https://www.linkedin.com/in/sandro-de-arag%C3%A3o-somogyi-36aa59130/">Sandro Somogyi.</p>
 	</footer>
 	<!-- fim rodapé -->
