--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                     <!-- fim header -->
 
                     <!-- rodapé -->
-                    <footer  class="text-light text-center bg-dark footer">
+                    <footer  class="text-light text-center">
                         <p style="color:#020202">Desenvolvido por <a href="https://www.linkedin.com/in/sandro-de-arag%C3%A3o-somogyi-36aa59130/">Sandro Somogyi.</p>
                     </footer>
                     <!-- fim rodapé -->
