--- a/projetos.html
+++ b/projetos.html
@@ -32,8 +32,8 @@
                 </button>
 
                 <!-- menu -->
-                <div class="collapse navbar-collapse" id="menu">
-                    <ul class="navbar-nav ml-md-auto text-light">
+                <div class="collapse navbar-collapse flex-grow-0" id="menu">
+                    <ul class="navbar-nav ml-md-auto text-light text-right">
                         <li class="nav-item">
                             <a class="nav-link" href="index.html">Sobre</a>
                         </li>
