--- a/projetos.html
+++ b/projetos.html
@@ -71,7 +71,7 @@
 
                                 Feito em PHP para ser um sistema mais dinamico, usado uma dashboard gratuita chamada StarAdmin como base mas com
                                 uma boa personalização e adicionado algumas novas funcionalidades.</p>
-                            <a href="https://github.com/sandrosomogyi/projetoFaculdadePHP" class="btn btn-outline-info">Acessar GitHub</a>
+                            <a href="https://github.com/sandrosomogyi/projetoFaculdadePHP" class="btn btn-warning">Acessar GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
 
                                 Feito em C# com integração ao banco de dados SQL Server, com uma contrução de uma dashboard com alternação dinamica de 
                                 formularios e tratamento de erros, modelos de banco de dados desde o conceitual até o fisico, entre outras coisas.</p>
-                            <a href="https://github.com/sandrosomogyi/projetoFaculdadeC-Sharp" class="btn btn-outline-info">Acessar GitHub</a>
+                            <a href="https://github.com/sandrosomogyi/projetoFaculdadeC-Sharp" class="btn btn-warning">Acessar GitHub</a>
                         </div>
                     </div>
                 </div>
