--- a/index.html
+++ b/index.html
@@ -19,15 +19,17 @@
     </head>
     <body>
         <!-- inicio menu -->
-        <nav class="navbar navbar-dark navbar-expand-lg navbar-default fixed-top">
+        <nav class="navbar navbar-dark navbar-expand-lg navbar-default
+            fixed-top">
             <div class="container-fluid">
                 <!-- logo -->
                 <a class="navbar-brand" href="contato.html">
-                    <img src="img/logoSandroSomogyi.png" alt=""/>
+                    <img src="img/logoSandroSomogyi.png" alt="" />
                 </a>
 
                 <!-- botao para menu no celular -->
-                <button class="navbar-toggler" data-toggle="collapse" data-target="#menu" aria-expanded="false">
+                <button class="navbar-toggler" data-toggle="collapse"
+                    data-target="#menu" aria-expanded="false">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -54,66 +56,158 @@
             <div class="container main-content">
                 <div class="row">
                     <!--texto-->
-                    <div class="col-lg-7 col-12 text-light jumbotron bg-transparent">
+                    <div class="col-lg-7 col-12 text-light jumbotron
+                        bg-transparent">
                         <div class="col-lg-12 col-12">
-
                             <div class="col-lg-6 col-6">
-                                <h2 style="text-align: right;color: #eb9722;">OLÁ,<br> SOU O <br>
+                                <h2 style="text-align: right;color: #eb9722;">OLÁ,<br>
+                                    SOU O <br>
                                     SANDRO <br> E EU SOU <br> DESENVOLVEDOR.</h2>
                             </div>
-                            <div  style= "float: right;" class="col-lg-6 col-6">
-                                <p style= "font-size: 25px" class="text-dark">Meu nome é Sandro Somogyi, estou me formando em Análise e 
-                                    desenvolvimento de sistemas e pretendo trabalhar com desenvolvimento.</p>
+                            <div style="float: right;" class="col-lg-6 col-6">
+                                <p style="font-size: 25px" class="text-dark">Meu
+                                    nome é Sandro Somogyi, estou me formando em
+                                    Análise e
+                                    desenvolvimento de sistemas e pretendo
+                                    trabalhar com desenvolvimento.</p>
                             </div>
-
                         </div>
-
                     </div>
 
                     <!--carrosel-->
                     <div class="col-lg-5 col-12">
-                        <br><br>
-                        <div id="img-next" class="carousel slide" data-ride="carousel">
+                        <br>
+                        <div id="img-next" class="carousel slide"
+                            data-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
-                                    <img class="d-block w-100" src="img/01.jpeg" alt="Primeiro Slide">
+                                    <img class="d-block w-100" src="img/01.jpeg"
+                                        alt="Primeiro Slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="img/02.jpeg" alt="Segundo Slide">
+                                    <img class="d-block w-100" src="img/02.jpeg"
+                                        alt="Segundo Slide">
                                 </div>
                                 <div class="carousel-item">
-                                    <img class="d-block w-100" src="img/03.jpeg" alt="Terceiro Slide">
+                                    <img class="d-block w-100" src="img/03.jpeg"
+                                        alt="Terceiro Slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="img/04.jpeg"
+                                        alt="Quarto Slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="img/05.jpeg"
+                                        alt="Quinto Slide">
+                                </div>
+                                <div class="carousel-item">
+                                    <img class="d-block w-100" src="img/06.jpeg"
+                                        alt="Sexto Slide">
                                 </div>
                             </div>
-                            <a class="carousel-control-prev" href="#img-next" role="button" data-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <a class="carousel-control-prev" href="#img-next"
+                                role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon"
+                                    aria-hidden="true"></span>
                                 <span class="sr-only">Anterior</span>
                             </a>
-                            <a class="carousel-control-next" href="#img-next" role="button" data-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <a class="carousel-control-next" href="#img-next"
+                                role="button" data-slide="next">
+                                <span class="carousel-control-next-icon"
+                                    aria-hidden="true"></span>
                                 <span class="sr-only">Próximo</span>
                             </a>
                         </div>
                     </div>
-                    
-                    <div class="col-lg-8 col-12 center">
-                        <p style= "font-size: 25px" class="text-dark">Tenho um pouco de experiência com criação de sites, 
-                            e um pouco de sistemas dos quais pode ser visto em minha aba de projetos.</p>
-                        <p style= "font-size: 25px" class="text-dark">Procuro por uma oportunidade de trabalho no momento para participar de uma empresa 
-                            legal e uma boa equipe, assim tendo um bom desenvolvimento profissional.</p>
-                        <a href="projetos.html" class="btn btn-warning btn-lg btn-block">Conheça meus Projetos</a>
+                    <!--fim carrosel-->
+                    <div class="row">
+                        <div class="col-lg-8 col-12 center">
+                            <p style="font-size: 25px" class="text-dark">Tenho
+                                um
+                                pouco de experiência com criação de sites
+                                e sistemas dos quais pode ser visto
+                                em
+                                minha aba de projetos.</p>
+                            <p style="font-size: 25px" class="text-dark">Procuro
+                                por
+                                uma oportunidade de trabalho na area de Desenvolvimento Web,
+                                para começar desenvolver a minha carreira.</p>
+                        </div>
                     </div>
+                    <!--conhecimetos-->
+                    <div class="col-lg-8 col-12 center">
+                        <br>
+                        <h3 style="color: #eb9722;">Principais
+                            Conhecimentos</h3>
+                        <br>
+                        <div class="row">
+                            <div class="col-lg-4 col-12 center">
+                                <p style="font-size: 25px"
+                                    class="text-dark">HTML5<br>CSS3<br>Bootstrap
+                                    4<br>JavaScript - Básico
+                                    <br>Jquerry - Básico<br>PHP - Básico
+                                </p>
+                            </div>
+                            <div class="col-lg-4 col-12 center">
+                                <p style="font-size: 25px"
+                                    class="text-dark">C#
+                                    -
+                                    Básico<br>VB.Net - Básico<br>asp.Net -
+                                    Básico
+                                    <br>SQL Server<br>MySQL<br>GIT
+                                </p>
+                            </div>
+                        </div>
+                        <br>
+                    </div>
+                    <!--fim conhecimetos-->
+                    <!--formação-->
+                    <div class="col-lg-8 col-12 center">
+                        <br>
+                        <h3 style="color: #eb9722;">Formação</h3>
+                        <br>
+                        <div class="col-lg-10 col-12 center">
+                            <h2><img height="70px" src="img/unip.png"></h2>
+                            <div class="media">
+                                <img
+                                    src="img/unipBanca.jpeg"
+                                    class="d-none d-md-block img-thumbnail"
+                                    style="margin-right:25px" width="200px">
+                                <div class="media-body">
+                                    <p><b>Tecnólogo</b> Universidade Paulista -
+                                        Sorocaba, UNIP, Brasil.
+                                        <br><br><b>Título</b>: Análise e
+                                        Desenvolvimento de Sistemas.
+                                        <br><br><b>Conclusão</b>: Dezembro/2019.
+                                    </div>
+                                </div>
+                            </div>
+                            <br>
+                    </div>
+                    <!--fim formação-->
 
-                    </header>
-                    <!-- fim header -->
+                    <!--fim texto-->
+                    <div class="col-lg-8 col-12 center">
+                        <br>
+                        <a href="projetos.html" class="btn btn-warning
+                            btn-lg
+                            btn-block">Conheça meus Projetos</a>
+                    </div>
+                </div>
+            </div>
 
-                    <!-- rodapé -->
-                    <footer  class="text-light text-center">
-                        <p style="color:#020202">Desenvolvido por <a href="https://www.linkedin.com/in/sandro-de-arag%C3%A3o-somogyi-36aa59130/">Sandro Somogyi.</p>
-                    </footer>
-                    <!-- fim rodapé -->
+        </header>
+        <!-- fim header -->
 
-                    <script src="js/jquery.js"></script>
-                    <script src="js/bootstrap.bundle.min.js"></script>
-                    </body>
-                    </html>
+        <!-- rodapé -->
+        <footer class="text-light text-center">
+            <p style="color:#020202">Desenvolvido por <a
+                    href="https://www.linkedin.com/in/sandro-de-arag%C3%A3o-somogyi-36aa59130/">Sandro
+                    Somogyi.</p>
+            </footer>
+            <!-- fim rodapé -->
+
+            <script src="js/jquery.js"></script>
+            <script src="js/bootstrap.bundle.min.js"></script>
+        </body>
+    </html>
