--- a/contato.html
+++ b/contato.html
@@ -22,8 +22,12 @@
         <nav class="navbar navbar-dark navbar-expand-lg navbar-default fixed-top">
             <div class="container-fluid">
                 <!-- logo -->
-                <a class="navbar-brand" href="index.html">
-                    <img src="img/logoSandroSomogyi.png" alt=""/>
+                <a class="navbar-brand d-none d-lg-block" href="contato.html">
+                    <img src="img/logoSandroSomogyi.png" alt="" />
+                </a>
+
+                <a class="navbar-brand d-none d-md-block d-lg-none" href="contato.html">
+                    <img src="img/logoSandroSomogyi.png" width="600px" alt="" />
                 </a>
 
                 <!-- botao para menu no celular -->
@@ -41,7 +45,7 @@
                             <a class="nav-link" href="projetos.html">Projetos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contato.html">Contato</a>
+                            <a class="nav-link active" href="contato.html">Contato</a>
                         </li>
                     </ul>
                 </div>
@@ -62,10 +66,10 @@
                                     O SEU CONTATO.</h2>
                             </div>
                             <div  style= "float: right;" class="col-lg-8 col-8">
-                                <p style= "font-size: 25px" class="text-dark"> 
+                                <p  class="text-dark"> 
                                     011-99897-8957 <br> sdsandros86@hotmail.com <br>                                   
                                 </p>
-                                <p style= "font-size: 25px" class="text-dark">
+                                <p  class="text-dark">
                                     Redes Sociais:
                                 </p>
                                 <a target="_blank" href="https://www.facebook.com/sandro.somogyi" class="menu_top">
