--- a/index.html
+++ b/index.html
@@ -23,8 +23,13 @@
             fixed-top">
             <div class="container-fluid">
                 <!-- logo -->
-                <a class="navbar-brand" href="contato.html">
+
+                <a class="navbar-brand d-none d-lg-block" href="contato.html">
                     <img src="img/logoSandroSomogyi.png" alt="" />
+                </a>
+
+                <a class="navbar-brand d-none d-md-block d-lg-none" href="contato.html">
+                    <img src="img/logoSandroSomogyi.png" width="600px" alt="" />
                 </a>
 
                 <!-- botao para menu no celular -->
@@ -37,7 +42,7 @@
                 <div class="collapse navbar-collapse flex-grow-0" id="menu">
                     <ul class="navbar-nav ml-md-auto text-light text-right">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Sobre</a>
+                            <a class="nav-link active" href="index.html">Sobre</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="projetos.html">Projetos</a>
@@ -65,7 +70,7 @@
                                     SANDRO <br> E EU SOU <br> DESENVOLVEDOR.</h2>
                             </div>
                             <div style="float: right;" class="col-lg-6 col-6">
-                                <p style="font-size: 25px" class="text-dark">Meu
+                                <p  class="text-dark">Meu
                                     nome é Sandro Somogyi, estou me formando em
                                     Análise e
                                     desenvolvimento de sistemas e pretendo
@@ -122,13 +127,13 @@
                     <!--fim carrosel-->
                     <div class="row">
                         <div class="col-lg-8 col-12 center">
-                            <p style="font-size: 25px" class="text-dark">Tenho
+                            <p  class="text-dark">Tenho
                                 um
                                 pouco de experiência com criação de sites
                                 e sistemas dos quais pode ser visto
                                 em
                                 minha aba de projetos.</p>
-                            <p style="font-size: 25px" class="text-dark">Procuro
+                            <p  class="text-dark">Procuro
                                 por
                                 uma oportunidade de trabalho na area de Desenvolvimento Web,
                                 para começar desenvolver a minha carreira.</p>
@@ -142,14 +147,14 @@
                         <br>
                         <div class="row">
                             <div class="col-lg-4 col-12 center">
-                                <p style="font-size: 25px"
+                                <p 
                                     class="text-dark">HTML5<br>CSS3<br>Bootstrap
                                     4<br>JavaScript - Básico
                                     <br>Jquerry - Básico<br>PHP - Básico
                                 </p>
                             </div>
                             <div class="col-lg-4 col-12 center">
-                                <p style="font-size: 25px"
+                                <p 
                                     class="text-dark">C#
                                     -
                                     Básico<br>VB.Net - Básico<br>asp.Net -
