--- a/projetos.html
+++ b/projetos.html
@@ -22,8 +22,12 @@
         <nav class="navbar navbar-dark navbar-expand-lg navbar-default fixed-top">
             <div class="container-fluid">
                 <!-- logo -->
-                <a class="navbar-brand" href="contato.html">
-                    <img src="img/logoSandroSomogyi.png" alt=""/>
+                <a class="navbar-brand d-none d-lg-block" href="contato.html">
+                    <img src="img/logoSandroSomogyi.png" alt="" />
+                </a>
+
+                <a class="navbar-brand d-none d-md-block d-lg-none" href="contato.html">
+                    <img src="img/logoSandroSomogyi.png" width="600px" alt="" />
                 </a>
 
                 <!-- botao para menu no celular -->
@@ -38,7 +42,7 @@
                             <a class="nav-link" href="index.html">Sobre</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="projetos.html">Projetos</a>
+                            <a class="nav-link active" href="projetos.html">Projetos</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contato.html">Contato</a>
