Atualizção de Responsividade

--- a/projetos.html
+++ b/projetos.html
@@ -22,12 +22,9 @@
         <nav class="navbar navbar-dark navbar-expand-lg navbar-default fixed-top">
             <div class="container-fluid">
                 <!-- logo -->
-                <a class="navbar-brand d-none d-lg-block" href="contato.html">
-                    <img src="img/logoSandroSomogyi.png" alt="" />
-                </a>
 
-                <a class="navbar-brand d-none d-md-block d-lg-none" href="contato.html">
-                    <img src="img/logoSandroSomogyi.png" width="600px" alt="" />
+                <a class="navbar-brand navbar-icon" href="contato.html">
+                    <img src="img/logoSandroSomogyi.png" alt="" />
                 </a>
 
                 <!-- botao para menu no celular -->
@@ -59,7 +56,7 @@
         <div id="course" class="container">
             <div class="row">
                 <!-- card 1 -->
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-4 col-md-12 col-sm-12">
                     <div class="card">
                         <img src="img/PHP.png" class="card-img-top">
 
@@ -82,7 +79,7 @@
                 <!-- fim card 1 -->
 
                 <!-- card 2 -->
-                <div class="col-lg-4 col-md-6 col-12">
+                <div class="col-lg-4 col-md-12 col-sm-12">
                     <div class="card">
                         <img src="img/C-Sharp.png" class="card-img-top">
 
