--- a/contato.html
+++ b/contato.html
@@ -22,12 +22,8 @@
         <nav class="navbar navbar-dark navbar-expand-lg navbar-default fixed-top">
             <div class="container-fluid">
                 <!-- logo -->
-                <a class="navbar-brand d-none d-lg-block" href="contato.html">
+                <a class="navbar-brand navbar-icon" href="contato.html">
                     <img src="img/logoSandroSomogyi.png" alt="" />
-                </a>
-
-                <a class="navbar-brand d-none d-md-block d-lg-none" href="contato.html">
-                    <img src="img/logoSandroSomogyi.png" width="600px" alt="" />
                 </a>
 
                 <!-- botao para menu no celular -->
