Adicionado Informações ao Index

--- a/index.html
+++ b/index.html
@@ -186,14 +186,89 @@
                             <br>
                     </div>
                     <!--fim formação-->
-
-                    <!--fim texto-->
+                    <!--atividades-->
                     <div class="col-lg-8 col-12 center">
                         <br>
-                        <a href="projetos.html" class="btn btn-warning
-                            btn-lg
-                            btn-block">Conheça meus Projetos</a>
+                        <h3 style="color: #eb9722;">Atividades Extracurriculares</h3>
+                        <br>                       
                     </div>
+                    <div class="col-lg-8 col-12 center">
+                        <p class="text-dark">
+                               <b>C# - Básico</b><br>
+                                Curso Linguagem de Programação C# - Básico, Fundação Bradesco.<br>
+                                (Agosto de 2019) - Concluído<br><br>
+                                <b>HTML e CSS na Prática</b><br>
+                                Curso de HTML e CSS, Fundação Bradesco.<br>
+                                (Agosto de 2019) - Concluído<br><br>
+                                <b>HTML – Básico</b><br>
+                                Curso de HTML, Fundação Bradesco.<br>
+                                (Agosto de 2019) - Concluído<br><br>
+                                <b>Introdução à Programação Orientada a Objetos (POO)</b><br>
+                                Curso de Programação Orientada a Objetos, Fundação Bradesco.<br>
+                                (Agosto de 2019) - Concluído <br><br>
+                                <b>Fundamento de Lógica de Programação</b><br>
+                                Curso de Lógica de programação, Fundação Bradesco.<br>
+                                (Agosto de 2019) - Concluído <br><br>
+                                <b>CURSO BOAS PRATICAS EM PHP</b><br>
+                                Curso de boas práticas na linguagem PHP, Udemy.<br>
+                                (Julho de 2019) - Concluído <br><br>
+                                <b>CURSO PHP ORIENTADO A OBJETOS</b><br>
+                                Introdução ao PHP orientado a objetos, Udemy.<br>
+                                (Julho de 2019) - Concluído <br><br>
+                                <b>CURSO CRIAÇÂO DE SITES DINAMICOS PHP</b><br>
+                                Introdução à linguagem PHP, Udemy.<br>
+                                (Julho de 2019) - Concluído <br><br>
+                                <b>CURSO GIT E CONTRIBUIÇÂO PARA PROJETOS OPEN SOURCE</b><br>
+                                Curso sobre controle de versão com Git e Github, Udemy.<br>
+                                (Julho de 2019) - Concluído <br><br>
+                                <b>PIM- Projeto Integrado Multidisciplinar 3</b><br>
+                                Desenvolvimento de um programa para o laboratório de enfermagem da Unip, para
+                                cadastro, agendamento e consulta de pacientes, desenvolvido em C# e banco de dados
+                                em SQL Server.<br>
+                                 (2019) <br><br>
+                                <b>CURSO BOOTSTRAP 4</b><br>
+                                Curso completo de Bootstrap 4, Udemy.<br>
+                                (Julho de 2019) - Concluído <br><br>
+                                <b>CURSO INTRODUÇÃO À LINGUAGEM CSS</b><br>
+                                Introdução à linguagem CSS, Udemy.<br>
+                                (Junho de 2019) - Concluído <br><br>
+                                <b>CURSO INTRODUÇÃO À LINGUAGEM JAVASCRIPT</b><br>
+                                Introdução à linguagem JavaScript, Udemy.<br>
+                                (Junho de 2019) - Concluído <br><br>
+                                <b>CURSO INTRODUÇÃO AO JQUERRY</b><br>
+                                Introdução ao framework jQuerry, Udemy.<br>
+                                (Junho de 2019) - Concluído <br><br>
+                                <b>PIM- Projeto Integrado Multidisciplinar 2</b><br>
+                                Desenvolvimento de um sistema web desenvolvido em php, para o curso de biomedicina
+                                da unip.<br>
+                                 (2018) <br><br>
+                                <b>PIM- Projeto Integrado Multidisciplinar</b><br>
+                                Desenvolvimento de um programa de saídas lógicas para execução em raspberry,
+                                desenvolvido em python.<br>
+                                 (2018) <br><br>
+                                <b>CURSO PRIMEIROS PASSOS COM PROGRAMAÇÃO APLICADA EM C++</b><br>
+                                Primeiros Passos com Programação Aplicada em C++, aulaEAD.<br>
+                                (Agosto de 2018) - Concluído <br><br>
+                                <b>CURSO PRIMEIROS PASSOS COM A LINGUAGEM C</b><br>
+                                Primeiros passos com a Linguagem C, aulaEAD.<br>
+                                (Junho de 2018) - Concluído <br><br>
+                                <b>CURSO VIRTUALIZAÇÃO COM ORACLE VIRTUALBOX</b><br>
+                                Virtualização com Oracle VirtualBOX, aulaEAD.<br>
+                                (Junho de 2018) - Concluído <br><br>
+                                <b>CURSO INTRODUÇÃO À LINGUAGEM HTML5</b><br>
+                                 Introdução á linguagem HTML, Udemy<br>
+                                 (Agosto 2018) - Concluido<br><br>
+                             </p>
+                    </div>
+                    <!--fim atividades-->
+                        <div class="col-lg-8 col-12 center">
+                            <br>
+                            <a href="projetos.html" class="btn btn-warning
+                                btn-lg
+                                btn-block">Conheça meus Projetos</a>
+                                <br>
+                        </div>
+                    <!--fim texto-->
                 </div>
             </div>
 
