Identação Melhorada Index

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                     SANDRO <br> E EU SOU <br> DESENVOLVEDOR.</h2>
                             </div>
                             <div style="float: right;" class="col-lg-6 col-6">
-                                <p  class="text-dark">Meu
+                                <p class="text-dark">Meu
                                     nome é Sandro Somogyi, estou me formando em
                                     Análise e
                                     desenvolvimento de sistemas e pretendo
@@ -123,15 +123,16 @@
                     <!--fim carrosel-->
                     <div class="row">
                         <div class="col-lg-8 col-12 center">
-                            <p  class="text-dark">Tenho
+                            <p class="text-dark">Tenho
                                 um
                                 pouco de experiência com criação de sites
                                 e sistemas dos quais pode ser visto
                                 em
                                 minha aba de projetos.</p>
-                            <p  class="text-dark">Procuro
+                            <p class="text-dark">Procuro
                                 por
-                                uma oportunidade de trabalho na area de Desenvolvimento Web,
+                                uma oportunidade de trabalho na area de
+                                Desenvolvimento Web,
                                 para começar desenvolver a minha carreira.</p>
                         </div>
                     </div>
@@ -143,14 +144,14 @@
                         <br>
                         <div class="row">
                             <div class="col-lg-4 col-12 center">
-                                <p 
+                                <p
                                     class="text-dark">HTML5<br>CSS3<br>Bootstrap
                                     4<br>JavaScript - Básico
                                     <br>Jquerry - Básico<br>PHP - Básico
                                 </p>
                             </div>
                             <div class="col-lg-4 col-12 center">
-                                <p 
+                                <p
                                     class="text-dark">C#
                                     -
                                     Básico<br>VB.Net - Básico<br>asp.Net -
@@ -184,18 +185,20 @@
                                 </div>
                             </div>
                             <br>
-                    </div>
-                    <!--fim formação-->
-                    <!--atividades-->
-                    <div class="col-lg-8 col-12 center">
-                        <br>
-                        <h3 style="color: #eb9722;">Atividades Extracurriculares</h3>
-                        <br>                       
-                    </div>
-                    <div class="col-lg-8 col-12 center">
-                        <p class="text-dark">
-                               <b>C# - Básico</b><br>
-                                Curso Linguagem de Programação C# - Básico, Fundação Bradesco.<br>
+                        </div>
+                        <!--fim formação-->
+                        <!--atividades-->
+                        <div class="col-lg-8 col-12 center">
+                            <br>
+                            <h3 style="color: #eb9722;">Atividades
+                                Extracurriculares</h3>
+                            <br>
+                        </div>
+                        <div class="col-lg-6 col-12 center">
+                            <p class="text-dark p2">
+                                <b>C# - Básico</b><br>
+                                Curso Linguagem de Programação C# - Básico,
+                                Fundação Bradesco.<br>
                                 (Agosto de 2019) - Concluído<br><br>
                                 <b>HTML e CSS na Prática</b><br>
                                 Curso de HTML e CSS, Fundação Bradesco.<br>
@@ -203,11 +206,14 @@
                                 <b>HTML – Básico</b><br>
                                 Curso de HTML, Fundação Bradesco.<br>
                                 (Agosto de 2019) - Concluído<br><br>
-                                <b>Introdução à Programação Orientada a Objetos (POO)</b><br>
-                                Curso de Programação Orientada a Objetos, Fundação Bradesco.<br>
+                                <b>Introdução à Programação Orientada a Objetos
+                                    (POO)</b><br>
+                                Curso de Programação Orientada a Objetos,
+                                Fundação Bradesco.<br>
                                 (Agosto de 2019) - Concluído <br><br>
                                 <b>Fundamento de Lógica de Programação</b><br>
-                                Curso de Lógica de programação, Fundação Bradesco.<br>
+                                Curso de Lógica de programação, Fundação
+                                Bradesco.<br>
                                 (Agosto de 2019) - Concluído <br><br>
                                 <b>CURSO BOAS PRATICAS EM PHP</b><br>
                                 Curso de boas práticas na linguagem PHP, Udemy.<br>
@@ -218,14 +224,23 @@
                                 <b>CURSO CRIAÇÂO DE SITES DINAMICOS PHP</b><br>
                                 Introdução à linguagem PHP, Udemy.<br>
                                 (Julho de 2019) - Concluído <br><br>
-                                <b>CURSO GIT E CONTRIBUIÇÂO PARA PROJETOS OPEN SOURCE</b><br>
-                                Curso sobre controle de versão com Git e Github, Udemy.<br>
+                                <b>CURSO GIT E CONTRIBUIÇÂO PARA PROJETOS OPEN
+                                    SOURCE</b><br>
+                                Curso sobre controle de versão com Git e Github,
+                                Udemy.<br>
                                 (Julho de 2019) - Concluído <br><br>
                                 <b>PIM- Projeto Integrado Multidisciplinar 3</b><br>
-                                Desenvolvimento de um programa para o laboratório de enfermagem da Unip, para
-                                cadastro, agendamento e consulta de pacientes, desenvolvido em C# e banco de dados
+                                Desenvolvimento de um programa para o
+                                laboratório de enfermagem da Unip, para
+                                cadastro, agendamento e consulta de
+                                pacientes, desenvolvido em C# e banco de
+                                dados
                                 em SQL Server.<br>
-                                 (2019) <br><br>
+                                (2019)
+                            </p>
+                        </div>
+                        <div class="col-lg-6 col-12 center">
+                            <p class="text-dark p2">
                                 <b>CURSO BOOTSTRAP 4</b><br>
                                 Curso completo de Bootstrap 4, Udemy.<br>
                                 (Julho de 2019) - Concluído <br><br>
@@ -239,51 +254,57 @@
                                 Introdução ao framework jQuerry, Udemy.<br>
                                 (Junho de 2019) - Concluído <br><br>
                                 <b>PIM- Projeto Integrado Multidisciplinar 2</b><br>
-                                Desenvolvimento de um sistema web desenvolvido em php, para o curso de biomedicina
+                                Desenvolvimento de um sistema web
+                                desenvolvido em php, para o curso de
+                                biomedicina
                                 da unip.<br>
-                                 (2018) <br><br>
+                                (2018) <br><br>
                                 <b>PIM- Projeto Integrado Multidisciplinar</b><br>
-                                Desenvolvimento de um programa de saídas lógicas para execução em raspberry,
+                                Desenvolvimento de um programa de saídas
+                                lógicas para execução em raspberry,
                                 desenvolvido em python.<br>
-                                 (2018) <br><br>
-                                <b>CURSO PRIMEIROS PASSOS COM PROGRAMAÇÃO APLICADA EM C++</b><br>
-                                Primeiros Passos com Programação Aplicada em C++, aulaEAD.<br>
+                                (2018) <br><br>
+                                <b>CURSO PRIMEIROS PASSOS COM PROGRAMAÇÃO
+                                    APLICADA EM C++</b><br>
+                                Primeiros Passos com Programação Aplicada em
+                                C++, aulaEAD.<br>
                                 (Agosto de 2018) - Concluído <br><br>
                                 <b>CURSO PRIMEIROS PASSOS COM A LINGUAGEM C</b><br>
                                 Primeiros passos com a Linguagem C, aulaEAD.<br>
                                 (Junho de 2018) - Concluído <br><br>
                                 <b>CURSO VIRTUALIZAÇÃO COM ORACLE VIRTUALBOX</b><br>
-                                Virtualização com Oracle VirtualBOX, aulaEAD.<br>
+                                Virtualização com Oracle VirtualBOX,
+                                aulaEAD.<br>
                                 (Junho de 2018) - Concluído <br><br>
                                 <b>CURSO INTRODUÇÃO À LINGUAGEM HTML5</b><br>
-                                 Introdução á linguagem HTML, Udemy<br>
-                                 (Agosto 2018) - Concluido<br><br>
-                             </p>
-                    </div>
-                    <!--fim atividades-->
+                                Introdução á linguagem HTML, Udemy<br>
+                                (Agosto 2018) - Concluido<br><br>
+                            </p>
+                        </div>
+                        <!--fim atividades-->
                         <div class="col-lg-8 col-12 center">
                             <br>
                             <a href="projetos.html" class="btn btn-warning
                                 btn-lg
                                 btn-block">Conheça meus Projetos</a>
-                                <br>
+                            <br>
                         </div>
-                    <!--fim texto-->
+                        <!--fim texto-->
+                    </div>
                 </div>
-            </div>
 
-        </header>
-        <!-- fim header -->
+            </header>
+            <!-- fim header -->
 
-        <!-- rodapé -->
-        <footer class="text-light text-center">
-            <p style="color:#020202">Desenvolvido por <a
-                    href="https://www.linkedin.com/in/sandro-de-arag%C3%A3o-somogyi-36aa59130/">Sandro
-                    Somogyi.</p>
-            </footer>
-            <!-- fim rodapé -->
+            <!-- rodapé -->
+            <footer class="text-light text-center">
+                <p style="color:#020202">Desenvolvido por <a
+                        href="https://www.linkedin.com/in/sandro-de-arag%C3%A3o-somogyi-36aa59130/">Sandro
+                        Somogyi.</p>
+                </footer>
+                <!-- fim rodapé -->
 
-            <script src="js/jquery.js"></script>
-            <script src="js/bootstrap.bundle.min.js"></script>
-        </body>
-    </html>
+                <script src="js/jquery.js"></script>
+                <script src="js/bootstrap.bundle.min.js"></script>
+            </body>
+        </html>
