--- a/index.html
+++ b/index.html
@@ -129,11 +129,12 @@
                                 e sistemas dos quais pode ser visto
                                 em
                                 minha aba de projetos.</p>
-                            <p class="text-dark">Procuro
-                                por
-                                uma oportunidade de trabalho na area de
-                                Desenvolvimento Web,
-                                para começar desenvolver a minha carreira.</p>
+                            <p class="text-dark">Trabalho com Desenvolvimento na área da Tecnologia da Informação
+                                relacionado a desenvolvimento de Softwares desktop entre outros.</p>
+                            <p class="text-dark">No momento estou adquirindo experiência e conhecimento
+                                em C#, VB6, SQL Server e Metodologia agil de desenvolvimento com um bom uso
+                                do Azure DevOps.
+                            </p>
                         </div>
                     </div>
                     <!--conhecimetos-->
@@ -146,17 +147,15 @@
                             <div class="col-lg-4 col-12 center">
                                 <p
                                     class="text-dark">HTML5<br>CSS3<br>Bootstrap
-                                    4<br>JavaScript - Básico
-                                    <br>Jquerry - Básico<br>PHP - Básico
+                                    4<br>JavaScript
+                                    <br>Jquerry<br>PHP<br>VB6
                                 </p>
                             </div>
                             <div class="col-lg-4 col-12 center">
                                 <p
                                     class="text-dark">C#
-                                    -
-                                    Básico<br>VB.Net - Básico<br>asp.Net -
-                                    Básico
-                                    <br>SQL Server<br>MySQL<br>GIT
+                                    <br>VB.Net<br>asp.Net
+                                    <br>SQL Server<br>MySQL<br>GIT<br>Azure DevOps
                                 </p>
                             </div>
                         </div>
