Atualização do index

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
                             </div>
                             <div style="float: right;" class="col-lg-6 col-6">
                                 <p class="text-dark">Meu
-                                    nome é Sandro Somogyi, estou me formando em
+                                    nome é Sandro Somogyi, sou formado em
                                     Análise e
-                                    desenvolvimento de sistemas e pretendo
-                                    trabalhar com desenvolvimento.</p>
+                                    desenvolvimento de sistemas e
+                                    trabalho com desenvolvimento.</p>
                             </div>
                         </div>
                     </div>
@@ -129,11 +129,21 @@
                                 e sistemas dos quais pode ser visto
                                 em
                                 minha aba de projetos.</p>
-                            <p class="text-dark">Trabalho com Desenvolvimento na área da Tecnologia da Informação
-                                relacionado a desenvolvimento de Softwares desktop entre outros.</p>
-                            <p class="text-dark">No momento estou adquirindo experiência e conhecimento
-                                em C#, VB6, SQL Server e Metodologia agil de desenvolvimento com um bom uso
-                                do Azure DevOps.
+                            <p class="text-dark">Trabalho com Desenvolvimento na
+                                área da Tecnologia da Informação
+                                relacionado a desenvolvimento de Softwares
+                                desktop, mobile entre outros.</p>
+                            <p class="text-dark">No momento estou adquirindo
+                                experiência e conhecimento em C#, Xamarin,
+                                Asp.Net,
+                                VB6, SQL Server e Metodologia ágil de
+                                desenvolvimento com um bom uso do Azure DevOps.
+                            </p>
+                            <p class="text-dark">Procuro por uma oportunidade de
+                                trabalho no momento para participar de uma
+                                empresa
+                                legal e uma boa equipe, assim tendo um bom
+                                desenvolvimento profissional.
                             </p>
                         </div>
                     </div>
@@ -155,7 +165,8 @@
                                 <p
                                     class="text-dark">C#
                                     <br>VB.Net<br>asp.Net
-                                    <br>SQL Server<br>MySQL<br>GIT<br>Azure DevOps
+                                    <br>SQL Server<br>Xamarin<br>GIT<br>Azure
+                                    DevOps
                                 </p>
                             </div>
                         </div>
